--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,12 @@ ul {
   transition-duration: var(--fast-animation);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.header-link:hover,
+.header-link:focus {
+  color: var(--btn-cl-accent);
+}
+
 .header-link.current::after {
   content: " ";
   position: absolute;
@@ -119,10 +125,6 @@ ul {
 
 .header-navigation:last-child {
   margin-right: 0;
-}
-.header-link:hover,
-.header-link:focus {
-  color: var(--btn-cl-accent);
 }
 
 .current {
@@ -350,7 +352,8 @@ ul {
 | hero button section
 ==========================
 */
-.hero-btn {
+.hero-btn,
+.modal-btn {
   padding: 10px 32px;
 
   font-family: var(--main-font);
@@ -373,8 +376,12 @@ ul {
   transition-duration: var(--fast-animation);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.hero-btn:hover,
-.hero-btn:focus {
+.hero-btn,
+.modal-btn,
+.footer-btn:hover,
+.hero-btn,
+.modal-btn,
+.footer-btn:focus {
   background-color: var(--btn-cl-accent);
   color: var(--btn-cl-txt);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -398,7 +405,6 @@ ul {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  
 }
 
 .modal-wrapper {
@@ -406,29 +412,31 @@ ul {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  padding: 40px;
   width: 528px;
-  height: 581px;
   background-color: var(--background-cl-white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  
+  transition: transform 300ms ease-in-out 200ms, opacity 300ms ease-in-out 200ms;
 }
 
 .backdrop.is-hidden .modal-wrapper {
   transform: translate(-50%, -50%), scale(0.4);
-opacity: 0;
-
+  opacity: 0;
 }
-
 
 .backdrop .modal-wrapper {
   transform: translate(-50%, -50%), scale(1);
   opacity: 1;
-  
 }
+/*
+==========================
+| form
+==========================
+*/
 
-.modal-btn {
+.close-btn {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -446,7 +454,154 @@ opacity: 0;
 
 .close-icon {
   fill: var(--logo-cl-heder);
+  transition-property: fill;
+  transition-duration: var(--fast-animation);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.close-btn:hover > .close-icon,
+.close-btn:focus > .close-icon {
+  fill: var(--btn-cl-accent);
+}
+.form-title {
+  display: block;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--list-cl-txt);
+  margin-bottom: 12px;
+}
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 448px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.form-modal-group {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.form-label {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  margin-bottom: 4px;
+}
+.form-input-group {
+  position: relative;
+}
+
+.form-modal-input {
+  padding: 12px 42px;
+  transition-property: border;
+  transition-duration: var(--fast-animation);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-modal-input + .form-icon:hover,
+.form-modal-input + .form-icon:focus {
+  border: 1px solid var(--btn-cl-accent);
+}
+.form-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition-property: fill;
+  transition-duration: var(--fast-animation);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: none
+}
+.form-message {
+  height: 138px;
+  padding: 12px 16px;
+  transition-property: border;
+  transition-duration: var(--fast-animation);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-modal-input,
+.form-message {
+  width: 100%;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: transparent;
+}
+.form-modal-input:hover,
+.form-modal-input:focus {
+  border: 1px solid var(--btn-cl-accent);
+}
+.form-modal-input:hover + .form-icon,
+.form-modal-input:focus + .form-icon {
+  fill: var(--btn-cl-accent);
+}
+
+.form-message:hover,
+.form-message:focus {
+  border: 1px solid var(--btn-cl-accent);
+}
+
+.form-message {
+  resize: none;
+  margin-bottom: 20px;
+}
+.form-checkbox {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  cursor: pointer;
+}
+
+.custom-check {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 7px;
+  width: 16px;
+  height: 15px;
+  outline: 2px solid var(--list-cl-txt);
+  outline-offset: -2px;
+  border-radius: 4px;
+  transition: background-color var(--fast-animation);
+  background-size: contain;
+  background-origin: border-box;
+}
+
+.form-modal-checkbox:checked + .custom-check .custom-check-icon {
+  opacity: 1;
+}
+
+.custom-check-icon {
+  opacity: 0;
+  transition: opacity var(--fast-animation);
+}
+
+.form-modal-checkbox:checked + .custom-check {
+  background-color: var(--btn-cl-accent);
+  outline: 2px solid var(--btn-cl-accent);
+  outline-offset: -2px;
+  border-radius: 4px;
+  background-size: contain;
+  background-origin: border-box;
+}
+.checkbox-link {
+  color: var(--btn-cl-accent);
+  text-decoration: none;
+  border-bottom: 1px solid var(--btn-cl-accent);
+}
+
+.modal-btn {
+  width: 200px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*
 ==========================
 | portfolio section
@@ -750,21 +905,26 @@ opacity: 0;
   color: currentColor;
   margin-bottom: 9px;
 }
+
 .footer-contacts:last-child {
   margin-bottom: 0;
 }
+
 .contacts:hover,
 .contacts:focus {
   color: var(--btn-cl-accent);
 }
+
 .footer-list {
   margin-right: 70px;
 }
+
 /*
 ==========================
 | socials link section
 ==========================
 */
+
 .join {
   font-weight: 700;
   font-size: 14px;
@@ -774,10 +934,12 @@ opacity: 0;
   color: var(--logo-cl-footer);
   margin-bottom: 20px;
 }
+
 .social-list {
   display: flex;
   align-items: center;
 }
+
 .social-link {
   display: flex;
   width: 44px;
@@ -791,10 +953,96 @@ opacity: 0;
   transition-duration: var(--fast-animation);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .social-link:hover,
 .social-link:focus {
   background-color: var(--btn-cl-accent);
 }
+
 .social-item:not(:last-child) {
   margin-right: 10px;
+}
+
+/*
+==========================
+| footer form
+==========================
+*/
+
+.footer-form-container {
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.footer-form {
+  display: flex;
+  width: 570px;
+}
+
+.footer-email {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-right: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  transition-property: border;
+  transition-duration: var(--fast-animation);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-email:hover,
+.footer-email:focus {
+  border-color: var(--btn-cl-accent);
+}
+
+.footer-mail-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 358px;
+}
+
+.footer-form-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.42;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--btn-cl-txt);
+  margin-bottom: 20px;
+}
+
+.send-footer-icon {
+  
+  margin-bottom: -6px;
+  margin-left: 10px;
+  pointer-events: none
+}
+
+.footer-btn {
+  max-width: 200px;
+  padding: 10px 28px 10px 28px;
+
+  font-family: var(--main-font);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+
+  color: var(--btn-cl-txt);
+  background-color: var(--hero-btn-cl);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition-property: background-color, box-shadow;
+  transition-duration: var(--fast-animation);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
