--- a/css/styles.css
+++ b/css/styles.css
@@ -819,7 +819,7 @@ ul {
 }
 .clients-list {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .clients-item {
   display: flex;
@@ -980,8 +980,7 @@ ul {
 }
 
 .footer-email {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding: 15px 16px;
   margin-right: 12px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -990,6 +989,8 @@ ul {
   transition-property: border;
   transition-duration: var(--fast-animation);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  width: 358px;
+  outline: transparent;
 }
 
 .footer-email:hover,
@@ -1001,7 +1002,7 @@ ul {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  width: 358px;
+  
 }
 
 .footer-form-title {
@@ -1016,15 +1017,13 @@ ul {
 }
 
 .send-footer-icon {
-  
   margin-bottom: -6px;
   margin-left: 10px;
-  pointer-events: none
 }
 
 .footer-btn {
   max-width: 200px;
-  padding: 10px 28px 10px 28px;
+  padding: 10px 25px 10px 25px;
 
   font-family: var(--main-font);
   font-weight: 700;
