--- a/css/styles.css
+++ b/css/styles.css
@@ -1023,6 +1023,7 @@ ul {
 
 .footer-btn {
   max-width: 200px;
+  max-height: 50px;
   padding: 10px 24px 10px 24px;
 
   font-family: var(--main-font);
