--- a/css/styles.css
+++ b/css/styles.css
@@ -399,7 +399,7 @@ ul {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  transition: transform var(--fast-animation), opacity var(--fast-animation);
+  transition: visibility var(--fast-animation), opacity var(--fast-animation);
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -418,16 +418,16 @@ ul {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transition: transform 300ms ease-in-out 200ms, opacity 300ms ease-in-out 200ms;
+  transition: visibility var(--fast-animation), transform  var(--fast-animation), opacity  var(--fast-animation);
 }
 
 .backdrop.is-hidden .modal-wrapper {
-  transform: translate(-50%, -50%), scale(0.4);
+  transform: translate(-50%, -50%) scale(0.4);
   opacity: 0;
 }
 
 .backdrop .modal-wrapper {
-  transform: translate(-50%, -50%), scale(1);
+  transform: translate(-50%, -50%) scale(1);
   opacity: 1;
 }
 /*
