--- a/css/styles.css
+++ b/css/styles.css
@@ -1018,13 +1018,13 @@ ul {
 
 .send-footer-icon {
   margin-bottom: -6px;
-  margin-left: 8px;
+  margin-left: 10px;
 }
 
 .footer-btn {
-  max-width: 200px;
-  max-height: 50px;
-  padding: 10px 24px 10px 24px;
+  width: 200px;
+  height: 50px;
+  padding: 10px 25px 10px 25px;
 
   font-family: var(--main-font);
   font-weight: 700;
