--- a/css/styles.css
+++ b/css/styles.css
@@ -487,6 +487,7 @@ ul {
 }
 
 .form-label {
+  display: block;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
@@ -516,9 +517,16 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   pointer-events: none
 }
+
+.form-message-group {
+  margin-bottom: 20px;
+
+}
 .form-message {
+  display: block;
   height: 138px;
   padding: 12px 16px;
+  resize: none;
   transition-property: border;
   transition-duration: var(--fast-animation);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -544,15 +552,10 @@ ul {
   border: 1px solid var(--btn-cl-accent);
 }
 
-.form-message {
-  resize: none;
-  margin-bottom: 20px;
-}
 .form-checkbox {
   display: flex;
+  justify-content: center;
   align-items: center;
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 30px;
   cursor: pointer;
 }
@@ -981,7 +984,6 @@ ul {
 
 .footer-email {
   padding: 15px 16px;
-  margin-right: 12px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
@@ -1002,7 +1004,13 @@ ul {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  margin-right: 12px;
   
+}
+.footer-mail-btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .footer-form-title {
@@ -1017,14 +1025,16 @@ ul {
 }
 
 .send-footer-icon {
-  margin-bottom: -6px;
   margin-left: 10px;
 }
 
 .footer-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 200px;
   height: 50px;
-  padding: 10px 25px 10px 25px;
+  padding: 10px auto;
 
   font-family: var(--main-font);
   font-weight: 700;
